# cargo-smart-release

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
src/: context.rs  lib.rs  traverse.rs  utils.rs  version.rs
src/changelog/: merge.rs  mod.rs  parse.rs  write.rs
src/changelog/section/: from_history.rs  mod.rs  segment.rs
src/cli/: main.rs  options.rs
src/command/: changelog.rs  mod.rs
src/command/release/: cargo.rs  git.rs  manifest.rs  mod.rs
src/git/: history.rs  mod.rs
tests/: journey.sh
tests/changelog/: merge.rs
tests/changelog/write_and_parse/: mod.rs
tests/snapshots/triple-depth-workspace/: a-b-dry-run-success-multi-crate-unconditional  a-dry-run-success-multi-crate-unconditional
tests/snapshots/triple-depth-workspace-changelog/crate-a-released/a/: CHANGELOG.md
tests/snapshots/triple-depth-workspace/crate-a-released-force-bump/a/: CHANGELOG.md
