[package]
name = "cargo-smart-release"
version = "0.21.2"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/cargo-smart-release"
description = "Cargo subcommand for fearlessly releasing crates in workspaces."
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[[bin]]
name = "cargo-smart-release"
path = "src/cli/main-smart-release.rs"
test = false

[[bin]]
name = "cargo-changelog"
path = "src/cli/main-changelog.rs"
test = false

[features]
cache-efficiency-debug = ["gix/cache-efficiency-debug"]

[dependencies]
gix = { version = "0.54.1", default-features = false, features = ["max-performance", "interrupt"] }
anyhow = "1.0.42"
clap = { version = "4.1.0", features = ["derive", "cargo"] }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime", "auto-color"] }
cargo_metadata = "0.18.0"
log = "0.4.14"
toml_edit = "0.21.0"
semver = "1.0.4"
crates-index = { version = "2.2.0", default-features = false, features = ["git-performance", "git-https"] }
cargo_toml = "0.17.2"
winnow = "0.5.12"
git-conventional = "0.12.0"
time = "0.3.23"
pulldown-cmark = "0.9.0"
bitflags = "2"

[dev-dependencies]
insta = "1.8.0"
gix-testtools = "0.12.0"

[workspace]
